--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "Her"  
   bio              : "Student"
   location         : "Singapore"
-  employer         : "Red Brick University"
+  employer         : "Dunman High School"
   uri              : # URL
   email            : "human123@example.com" 
 
